# cam_lidar_calib

./: CMakeLists.txt  README.md  README_cn.md  package.xml
include/cam_lidar_calib/: calib_node.h  magic_wand.h  pnp_solver.h  projector_node.h
launch/: calib_node.launch  projector_node.launch
rviz/: calib.rviz
src/: calib_node.cpp  magic_wand.cpp  main.cpp  pnp_solver.cpp  projector_node.cpp  rqt_pixel_picker.py
